[gd_scene load_steps=4 format=3 uid="uid://bhdr21ac6awwn"]

[ext_resource type="Script" uid="uid://sqb8vq4vbbd4" path="res://scenes/Menu/visualization_sub_menu.gd" id="1_u4vkd"]

[sub_resource type="Theme" id="Theme_xs65g"]
Button/font_sizes/font_size = 41

[sub_resource type="Theme" id="Theme_gxq6l"]
Label/font_sizes/font_size = 36

[node name="VisualizationSubMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u4vkd")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85
columns = 5

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.1
anchor_bottom = 0.2
offset_left = -82.0
offset_top = -55.0
offset_right = 35.5
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_xs65g")
text = "Go Back"

[node name="LocationLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.19
anchor_top = 0.055
anchor_right = 0.19
anchor_bottom = 0.09
offset_right = 40.0
offset_bottom = 23.0
theme = SubResource("Theme_gxq6l")

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
